120Hz requestAnimationFrame is not supported on iPhone Pros, it is supported on iPad Pros https://bugs.webkit.org/show_bug.cgi?id=272165 rdar://126067757

Reviewed by Simon Fraser.

In 273122@main we opted into higher frame rate animations when performed by Core Animation on
qualifying hardware. In 274234@main we did the same for scrolling animations resulting from
interacting with the keyboard (such as pressing the space bar).

We must do the same thing with the `CADisplayLink` created in `RemoteLayerTreeDrawingAreaProxyIOS`
which drives page rendering updates.

* Source/WebKit/Platform/cocoa/CAFrameRateRangeUtilities.h:
* Source/WebKit/UIProcess/RemoteLayerTree/ios/RemoteLayerTreeDrawingAreaProxyIOS.mm:
(-[WKDisplayLinkHandler initWithDrawingAreaProxy:]):

Canonical link: https://commits.webkit.org/278949@main